Package: aroma.cn.eval
======================

Version: 0.5.2 [2014-03-24]
o ROBUSTNESS: Added validation of arguments to RocCurve().
o Now RocCurve() also accepts a list with element 'roc' and 'cuts'.
o Minor speedup by replacing rm() calls with NULL assignments.


Version: 0.5.1 [2014-03-09]
o Updated package dependencies.
o Package requires R (>= 3.0.2) [and Bioc (>= 2.13.0)].


Version: 0.5.0 [2013-12-12]
o Added methods for setting up, parsing and extract CN regions -
  methods that were previously only part of the RSP reports code.
o DOCUMENTATION: Added vignette 'ROC assessment of detecting a change point'
o DOCUMENTATION: Added help for several more methods.
o CLEANUP: Dropped function definitions that now are part of the package
  from several internal RSP reports.


Version: 0.4.1 [2013-12-09]
o Updated package dependencies.  Lowered the required version of ROC
  just to get it to build on R-Forge.
o CLEANUP: Shortened too long (> 100 characters) pathnames of some files.


Version: 0.4.0 [2013-10-28]
o Updated package dependencies.
o Package requires R (>= 2.15.0) [and Bioc (>= 2.10.0)].
o ROBUSTNESS: Now importing only what needs to be imported and
  formally declaring all S3 methods in NAMESPACE.
o CLEANUP: Now scanRocTpAtFp() calls generic function rowWeightedMeans()
  instead of rowWeightedMeans.matrix().
o CLEANUP: Package no longer depends on R.cache.  Moved several packages
  from 'Depends' to 'Imports'.
o CLEANUP: Dropped obsolete usage of autoload().


Version: 0.3.3 [2013-09-23]
o SPEEDUP/CLEANUP: normalizeTumorBoost() now uses which() instead of
  whichVector() of 'R.utils'.  Before R (< 2.11.0), which() used to be
  10x slower than whichVector(), but now it's 3x faster.
o Updated package dependencies.


Version: 0.3.2 [2012-04-16]
o Updated package dependencies.


Version: 0.3.1 [2012-03-01]
o PREPARING FOR FUTURE: Updated TCGA vignette to also work when
  RawGenericSignals extends a data.frame, i.e. no longer provides
  reference variables.